Implement missing pieces from first iteration
 * Video section on the frontpage
 * Make footer full width and add social media links
 * Add privacy-policy link and page

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -143,3 +143,13 @@ $accent-hover-color: darken($accent-color, 10%);
     width: auto;
   }
 }
+
+.social-icons {
+  display: flex;
+  gap: 2rem;
+  justify-content: end;
+
+  img {
+    height: 24px;
+  }
+}
