--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,22 +1,53 @@
 <span class="anchor" id="contact"></span>
-<div class="container-xl bg-black text-white p-4">
-    <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-6 my-auto light">
-            <address>
-                <strong>SensorFu Oy</strong><br/>
-                Teknologiantie 11<br/>
-                90590 Oulu, Finland<br/>
-                Business ID: 2811349-6<br/>
+<div class="bg-black text-white">
+    <div class="container-xl bg-black text-white p-5">
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-6 my-auto light">
+                <address>
+                    <h3 class="text-white">SensorFu Oy</h3>
+                    Teknologiantie 11<br/>
+                    90590 Oulu, Finland<br/>
+                    Business ID: 2811349-6<br/>
+                </address>
+            </div>
+            <div class="col-2">
+                <a class="btn btn-gradient" href="mailto:contact@sensorfu.com">Get in touch &rarr;</a>
+            </div>
 
-            </address>
-        </div>
-        <div class="col-2">
-            <a class="btn btn-gradient" href="mailto:">Get in touch &rarr;</a>
-        </div>
+            <div class="col-6 text-end social-icons">
+                <a href="https://www.youtube.com/@sensorfu" rel="noreferer noopener" target="_blank">
+                    <img src="assets/img/social-icons/youtube.svg" alt="SensorFu on Youtube">
+                </a>
 
+                <a href="https://twitter.com/sensorfu/" rel="noreferer noopener" target="_blank">
+                    <img src="assets/img/social-icons/twitter.svg" alt="SensorFu on X">
+                </a>
+
+                <a href="https://www.linkedin.com/company/sensorfu/" rel="noreferer noopener" target="_blank">
+                    <img src="assets/img/social-icons/linkedin.svg" alt="SensorFu on Linkedin">
+                </a>
+
+                <a href="https://github.com/sensorfu/" rel="noreferer noopener" target="_blank">
+                    <img src="assets/img/social-icons/github.svg" alt="SensorFu on Github">
+                </a>
+
+                <a href="https://medium.com/sensorfu/" rel="noreferer noopener" target="_blank">
+                    <img src="assets/img/social-icons/medium.svg" alt="SensorFu on Medium">
+                </a>
+            </div>
+        </div>
     </div>
 </div>
 
-<div class="container-xl bg-primary p-2">
-© 2024 SensorFu. All rights reserved.
+<div class="bg-primary">
+    <div class="container-xl py-2 px-4 small">
+        <div class="row">
+            <div class="col-8">
+                © 2024 SensorFu. All&nbsp;rights&nbsp;reserved.
+            </div>
+            <div class="col-4 text-end">
+                <a class="text-decoration-none text-white" href="/privacy-policy.html">Privacy Policy</a>
+            </div>
+        </div>
+    </div>
 </div>
