--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <body id="page-top">
     {% include navigation.html %}
 
-    <div class="container">
+    <div class="container my-4">
         {{ content }}
     </div>
 
