--- a/assets/css/frontpage.scss
+++ b/assets/css/frontpage.scss
@@ -63,8 +63,9 @@
   justify-content: stretch;
 
   .post-card {
-    max-width: 30%;
+    flex: 1 1 30%;
     min-width: 300px;
+    max-width: 45%;
     height: 400px;
     background-color: white;
 
@@ -126,5 +127,54 @@
     text-transform: capitalize;
     text-decoration: none;
   }
+}
 
+.video-section {
+  display: flex;
+  height: 350px;
+
+  .text-container {
+    background-color: var(--primary-color);
+    flex: 0 0 auto;
+    width: 450px;
+
+    color: white;
+
+    h2 {
+      color: white;
+      font-weight: 700;
+    }
+
+    padding: 4rem;
+
+    a {
+      display: flex;
+      gap: 1.5rem;
+      font-size: 1.5rem;
+      color: white;
+      text-decoration: none;
+    }
+  }
+
+  .bg-container {
+    position: relative;
+    flex: 1 1 auto;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: 10%;
+      filter: brightness(60%);
+    }
+
+    .gradient-overlay {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      mix-blend-mode: overlay;
+      background-image: linear-gradient(102deg, rgba(66, 162, 206, 0.45) 34%, rgba(127, 92, 163, 0.45) 77%);
+    }
+  }
 }
