Add shadow to navbar and set page background to primary blue

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-expand-md bg-primary-subtle sticky-top" data-bs-theme="dark">
+<nav class="navbar navbar-expand-md bg-primary-subtle sticky-top shadow-lg" data-bs-theme="dark">
     <div class="container-xl px-3 px-lg-4">
         <a class="navbar-brand fst-italic fw-bold" href="/">SensorFu</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
