--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,6 +18,10 @@ $accent-hover-color: darken($accent-color, 10%);
   --carousel-image-height: 40px;
 }
 
+html {
+  background-color: var(--primary-color);
+}
+
 .bg-primary {
   background-color: var(--primary-color) !important;
   color: white;
