--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -60,7 +60,7 @@ html {
 .hero {
   height: 450px;
 
-  background-blend-mode: overlay;
+  background-color: black;
   background-size: cover;
   background-position: center;
 
