--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="/assets/css/beacon.css">
     {% endif %}
 
+    {% if page.preload_image %}
+    <link rel="preload" href="{{ page.preload_image | absolute_url }}" as="image">
+    {% endif %}
 
     <!-- Open Graph Tags-->
     <meta property="og:title" content="{{ page.title }}">
