Add some responsive styles for small / mobile screens

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,6 @@
 <span class="anchor" id="contact"></span>
 <div class="bg-black text-white">
-    <div class="container-xl bg-black text-white p-5">
+    <div class="container-xl bg-black text-white p-4 p-sm-5">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-6 my-auto light">
                 <address>
@@ -14,7 +14,7 @@
                 <a class="btn btn-gradient" href="mailto:contact@sensorfu.com">Get in touch &rarr;</a>
             </div>
 
-            <div class="col-6 text-end social-icons">
+            <div class="col-md-6 social-icons mt-4 mt-md-0">
                 <a href="https://www.youtube.com/@sensorfu" rel="noreferer noopener" target="_blank">
                     <img src="assets/img/social-icons/youtube.svg" alt="SensorFu on Youtube">
                 </a>
