--- a/assets/css/beacon.scss
+++ b/assets/css/beacon.scss
@@ -1,11 +1,18 @@
 ---
 ---
+@import "variables";
+@import "utils";
+
 .beacon-hero {
-  background-image:
-      url(../img/beacon_banner.jpg),
-      //fallback while loading
-      linear-gradient(135deg, var(--primary-color) 60%, var(--accent-color) 90%);
-  height: 500px;
+  background-image: url(../img/beacon_banner.jpg),
+    //fallback while loading
+  linear-gradient(135deg, $primary-color 60%, $accent-color 90%);
+
+  height: 400px;
+
+  @include media(md) {
+    height: 500px;
+  }
 
   .hero-content {
     max-width: 500px;
@@ -17,7 +24,13 @@
 .beacon-card {
   display: flex;
   background: #EEEEEE;
-  margin-bottom: 1rem;
+
+  flex-direction: column;
+  margin-bottom: 2rem;
+
+  .text-container {
+    order: 1;
+  }
 
   .black {
     color: black;
@@ -29,17 +42,38 @@
   }
 
   .icon-container {
-    width: 300px;
+    width: 100%;
+    height: 150px;
+
     flex-shrink: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 75px;
 
-    background: var(--primary-color);
+    background: $primary-color;
 
     img {
-      height: auto;
+      height: 75%;
+      width: auto;
+    }
+  }
+
+  @include media(md) {
+    flex-direction: row;
+    margin-bottom: 1rem;
+
+    .text-container {
+      order: 0;
+    }
+
+    .icon-container {
+      width: 300px;
+      height: initial;
+
+      img {
+        width: 50%;
+        height: auto;
+      }
     }
   }
 }
