--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,9 +1,7 @@
 ---
 ---
-
-$primary-color: #222851;
-$accent-color: #42A2CE;
-$accent-hover-color: darken($accent-color, 10%);
+@import "variables";
+@import "utils";
 
 :root {
   --primary-color: #{$primary-color};
@@ -15,15 +13,19 @@ $accent-hover-color: darken($accent-color, 10%);
   --bs-border-radius: 0;
   --bs-heading-color: var(--accent-color);
 
-  --carousel-image-height: 40px;
+  --carousel-image-height: 30px;
+
+  @include media(sm){
+    --carousel-image-height: 40px;
+  }
 }
 
 html {
-  background-color: var(--primary-color);
+  background-color: $primary-color;
 }
 
 .bg-primary {
-  background-color: var(--primary-color) !important;
+  background-color: $primary-color !important;
   color: white;
 }
 
@@ -46,7 +48,7 @@ html {
 }
 
 .btn-gradient {
-  background-image: linear-gradient(to right, var(--primary-color), var(--accent-color));
+  background-image: linear-gradient(to right, $primary-color, $accent-color);
   background-size: 100%;
   border: none;
   color: white;
@@ -58,7 +60,7 @@ html {
 }
 
 .hero {
-  height: 450px;
+  height: 400px;
 
   background-color: black;
   background-size: cover;
@@ -66,23 +68,36 @@ html {
 
   color: white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
+  h1 {
+    color: white;
+    font-size: 1.9rem;
+    font-weight: 700;
+
+    @include media(sm) {
+      font-size: 2.2rem;
+    }
+  }
+
+  h2 {
+    color: white;
+    font-size: 1.2rem;
+    font-weight: 600;
+
+     @include media(sm) {
+      font-size: 1.5rem;
+    }
+  }
+
+  & > * {
+    height: 100%;
+  }
+
+  @include media(sm) {
+    height: 450px;
+  }
 }
 
-.hero h1 {
-  color: white;
-  font-size: 2.2rem;
-  font-weight: 700;
-}
-
-.hero h2 {
-  color: white;
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-
-.hero > * {
-  height: 100%;
-}
 
 .hero-content {
   height: 100%;
@@ -92,8 +107,16 @@ html {
   flex-direction: column;
   justify-content: center;
   align-content: stretch;
-  padding: 3rem;
+  padding: 1rem;
   gap: 1rem;
+
+  @include media(sm) {
+    padding: 2rem;
+  }
+
+  @include media(md) {
+    padding: 3rem;
+  }
 }
 
 .carousel-outer {
@@ -151,7 +174,10 @@ html {
 .social-icons {
   display: flex;
   gap: 2rem;
-  justify-content: end;
+
+  @include media(md) {
+    justify-content: end;
+  }
 
   img {
     height: 24px;
