--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="/partners.html">Partners</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-nowrap" href="/#aboutus">About us</a>
+                    <a class="nav-link text-nowrap" href="/about.html">About us</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link border border-white rounded-pill px-3 py-0" href="/#contact">Contact</a>
