--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,7 @@
 $primary-color: #222851;
-$accent-color: #42A2CE;
+$accent-color: #42a2ce;
+$bg-light: #f2f2f2;
+$bg-dark: #222222;
 $accent-hover-color: darken($accent-color, 10%);
 
 $breakpoints: (
