--- a/assets/css/_beacon.scss
+++ b/assets/css/_beacon.scss
@@ -1,12 +1,13 @@
 ---
 ---
+
 @import "variables";
 @import "utils";
 
 .beacon-hero {
   background-image: url(../img/beacon_banner.jpg),
     //fallback while loading
-  linear-gradient(135deg, $primary-color 60%, $accent-color 90%);
+    linear-gradient(135deg, $primary-color 60%, $accent-color 90%);
 
   height: 400px;
 
@@ -23,10 +24,10 @@
 
 .beacon-card {
   display: flex;
-  background: #EEEEEE;
+  background: #eeeeee;
 
   flex-direction: column;
-  margin-bottom: 2rem;
+  margin: 2rem;
 
   .text-container {
     order: 1;
@@ -44,6 +45,7 @@
   .icon-container {
     width: 100%;
     height: 150px;
+    padding: 2rem;
 
     flex-shrink: 0;
     display: flex;
